Fixed purchasing of CAN

--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -1,6 +1,7 @@
 {
 	"address_per_can": 10,
 	"network" : 1,
+	"can_decimals": 6,
   "tx_batch_size" : 150,
   "max_gas_limit": 7500000,
 	"hsta" : [{"constant":true,"inputs":[],"name":"name","outputs":[{"name":"","type":"string"}],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"decimals","outputs":[{"name":"","type":"uint8"}],"payable":false,"type":"function"},{"constant":true,"inputs":[{"name":"_owner","type":"address"}],"name":"balanceOf","outputs":[{"name":"balance","type":"uint256"}],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"symbol","outputs":[{"name":"","type":"string"}],"payable":false,"type":"function"}]
